--- a/style.css
+++ b/style.css
@@ -119,10 +119,34 @@ h1 {
   margin-bottom: 2rem;
 }
 
-.win-game{
+.win-game {
   background-color: green;
 }
 
 .lose-game {
   background-color: red;
+}
+
+@media(max-width: 800px) {
+  main {
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    align-items: center;
+  }
+
+  .left,
+  .right {
+    width: 100%;
+  }
+
+  .right {
+    text-align: center;
+  }
+}
+
+@media(max-width: 430px) {
+  .right{
+    font-size: 1.5rem;
+  }
 }
